--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="keywords" content="">
 	<meta name="robots" content="index,follow">
 
-    <title>Job Hill - Job Portal Template</title>
+    <title>FireBrains - Job Portal </title>
 
     <!-- Bootstrap Core CSS -->
 	<link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
