--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 						<i class="fa fa-bars"></i>
 					</button>
-					<a class="navbar-brand" href="index-2.html">
+					<a class="navbar-brand" href="index.html">
 						<img src="assets/img/logo-light.png" class="logo logo-display" alt="">
 						<img src="assets/img/logo.png" class="logo logo-scrolled" alt="">
 					</a>
