--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<li class="dropdown">
 							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Hire Freelancers</a>
 							<ul class="dropdown-menu animated fadeOutUp">
-								<li><a href="#">Post a Local Job</a></li>
+								<li><a href="#">Post Job</a></li>
 								<li><a href="#">Post project</a></li>
 								<li><a href="#">Community</a></li>
 							
