Changed landing text

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				<div class="col-md-10 col-sm-10 col-md-offset-1 col-sm-offset-1">
 				
 					<div class="caption text-center cl-white">
-						<h2>Find Your Career. You Deserve it.</h2>
+						<h2>Find the right talents for your job</h2>
 						<p>So many business owners, innovators, etc  use Freelancers to bring their ideas to life.</p>
 
 						<a href="#" class="btn theme-btn btn-m mrg-5"><span class="ti-upload padd-r-5"></span>Search for jobs</a>
