--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<h2>Find the right talents for your job</h2>
 						<p>So many business owners, innovators, etc  use Freelancers to bring their ideas to life.</p>
 
-						<a href="#" class="btn theme-btn btn-m mrg-5"><span class="ti-upload padd-r-5"></span>Search for jobs</a>
+						<a href="#" class="btn theme-btn btn-m mrg-5"><span class="ti-search padd-r-5"></span>Search for jobs</a>
 						<a href="#" class="btn btn-hiring btn-m mrg-5"><span class="ti-briefcase padd-r-5"></span>Post a Job for Free</a>
 					</div>
 					
@@ -142,7 +142,7 @@
 									<i class="fa fa-check"></i>
 								</div>
 								<div class="cmp-detail">							
-									<h3>674.058</h3>
+									<h3>300</h3>
 									<span>Active Workers</span>
 								</div>
 							</div>
@@ -155,7 +155,7 @@
 									<i class="fa fa-check"></i>
 								</div>
 								<div class="cmp-detail">							
-									<h3>74.587</h3>
+									<h3>8</h3>
 									<span>Companies</span>
 								</div>
 							</div>
@@ -168,7 +168,7 @@
 									<i class="fa fa-check"></i>
 								</div>
 								<div class="cmp-detail">							
-									<h3>47</h3>
+									<h3>3</h3>
 									<span>Countries</span>
 								</div>
 							</div>
