--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="copyright text-center">
-							<p>&copy; Copyright 2018 FireBrains Inc</p>
+							<p>&copy; Copyright 2018 FireBrains Inc.</p>
 						</div>
 					</div>
 				</div>
