updated back to top via logo ..Added a smooth scroll

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<body>
 		
 		<!-- ======================= Start Navigation ===================== -->
-		<nav class="navbar navbar-default navbar-mobile navbar-fixed white no-background bootsnav">
+		<nav class="navbar navbar-default navbar-mobile navbar-fixed white no-background bootsnav" id="head-section">
 			<div class="container">
 			
 				<!-- Start Logo Header Navigation -->
@@ -69,7 +69,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
 						<i class="fa fa-bars"></i>
 					</button>
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="index.html" uk-scroll>
 						<img src="assets/img/logo-light.png" class="logo logo-display" alt="">
 						<img src="assets/img/logo.png" class="logo logo-scrolled" alt="">
 					</a>
@@ -133,7 +133,7 @@
 						<h2>Find the right talents for your job</h2>
 						<p>So many business owners, innovators, etc  use Freelancers to bring their ideas to life.</p>
 
-						<a href="#job-section" uk-scroll='duration:3000' class="btn theme-btn btn-m mrg-5"><span class="ti-search padd-r-5"></span>Search for jobs</a>
+						<a href="#job-section" uk-scroll='duration:1000' class="btn theme-btn btn-m mrg-5"><span class="ti-search padd-r-5"></span>Search for jobs</a>
 						<a href="#" class="btn btn-hiring btn-m mrg-5"><span class="ti-briefcase padd-r-5"></span>Post a Job for Free</a>
 					</div>
 					
