--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="keywords" content="">
 	<meta name="robots" content="index,follow">
 
-    <title>FireBrains - Job Portal </title>
+    <title>FireBrains - African Job Portal </title>
 
 
       <!-- UIKIT css....Major backbone for the smooth scroll -->
